Revision history for {{$dist->name}}

{{$NEXT}}

0.63_01   2019-01-02 11:23:48 -0500
  - EXPERIMENTAL ExtUtils::MakeMaker release

0.62_01   2019-01-01 04:23:23 -0500
  - New type: array of string "string [x]" and "string []" are supported
  - NULL terminated arrays are supported as return types for string and opaque arrays
    "opaque []" and "string []"

0.61_01   2018-12-31 19:56:20 -0500
  - New type: pointers to string "string *" are supported.
  - FFI::Platypus::Type::StringPointer is now deprecated.

0.60_01   2018-12-30 14:55:15 -0500
  - sticky/unstick functions can safely be called multiple times
  - Removed some extra lookups from closure calls, should be faster now.

0.59      2018-12-16 16:33:37 -0700
  - Workaround for possibly buggy pack/unpack on Perl 5.8.8 gh#91
    Fixes FFI::Platypus::Type::StringArray

0.58      2018-11-20 14:31:10 -0500
  - Add unstick method to FFI::Platypus::Closure

0.57_01   2018-11-04 15:36:33 -0500
  - Major refactor of the internals of the type system.  The API is
    the same but some type meta-data (which was never guaranteed
    to stay the same) may have changed.

    * The internal representation of types is much smaller (4 bytes
      for simple types), which can save a lot of memory if you have
      lots of types.

    * Fixed width strings example: `string(32)` are now internally
      treated the same as a record with no class `record(32)`.
      Previously these were separate types but worked identically,
      this removes duplicate code.

    * Fixed width string arguments to a closure are now read-only,
      Usually you should be copying these arguments anyway.

    * Removed the internal type "exotic float" which includes
      `long double`, `complex float` and `complex double`.  These are
      now grouped internally with other scalar types.

  - Merge FFI::Platypus::Type::StringArray into this distribution

0.56      2018-09-03 09:17:42 -0400