@@ -32,3 +32,4 @@ core
 /pm_to_blib
 /Makefile
 *.bs
+*.def
