@@ -5,10 +5,10 @@ use warnings;
 use Config;
 use File::Glob qw( bsd_glob );
 use ExtUtils::MakeMaker 7.12 ();
-use Alien::Base::Wrapper qw( Alien::FFI !export );
 use Text::ParseWords qw( shellwords );
 use lib 'inc';
 use My::ShareConfig;
+use Alien::Base::Wrapper qw( Alien::FFI My::psapi !export );
 
 sub myWriteMakefile
 {
@@ -33,16 +33,6 @@ sub myWriteMakefile
 
   $args{PREREQ_PM}->{'Math::Int64'} = '0.34'
     if $ENV{FFI_PLATYPUS_DEBUG_FAKE32} || $Config{uvsize} < 8;
-  
-  if($^O eq 'MSWin32' && $Config{ccname} eq 'cl')
-  {
-    push @{ $args{LIBS} }, 'psapi.lib';
-  }
-  elsif($^O =~ /^(MSWin32|cygwin|msys)$/)
-  {
-    push @{ $args{LIBS} }, '-L/usr/lib/w32api' if $^O =~ /^(cygwin|msys)$/;
-    push @{ $args{LIBS} }, '-lpsapi';
-  }
 
   $share_config->set(extra_compiler_flags => [ shellwords(Alien::FFI->cflags) ]);
   $share_config->set(extra_linker_flags   => [ shellwords(Alien::FFI->libs) ]);  
